demo start state

--- a/package.json
+++ b/package.json
@@ -3,16 +3,11 @@
   "version": "0.1.0",
   "main": "main.js",
   "devDependencies": {
-    "electron": "^1.7.9",
-    "electron-build-env": "^0.2.0",
-    "neon-cli": "^0.1.20"
+    "electron": "^1.7.9"
   },
   "scripts": {
-    "start": "electron .",
-    "build": "electron-build-env neon build neon-mandelbrot",
-    "postinstall": "yarn run build"
+    "start": "electron ."
   },
   "dependencies": {
-    "neon-mandelbrot": "hone/neon-mandelbrot"
   }
 }
