--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "main": "main.js",
   "devDependencies": {
-    "electron": "^1.7.9"
+    "electron": "^1.7.9",
+    "electron-build-env": "^0.2.0",
+    "neon-cli": "^0.1.20"
   },
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+		"build": "electron-build-env neon build neon-mandelbrot"
   },
   "dependencies": {
-    "mandelbrot": "file:./../mandelbrot.js"
+    "mandelbrot": "file:./../mandelbrot.js",
+    "neon-mandelbrot": "file:./../neon-mandelbrot"
   }
 }
